--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,23 +1,81 @@
 html { 
-	font-family: serif;
+	font-family: Verdana;
 }
 
 
-img {
-	width: 60%;
-	position : relative;
-	right : 0px;
+#greeting {
+	font-family : "Times New Roman", Times, serif;
+	font-style: serif;
+	font-size: 3rem;
+	text-align: center;
+	border: 0.2rem;
+	border-style: solid;
+	padding: 2rem;
+	margin-top: 1rem;
 }
 
+input {
+	display: block;
+	width: 20rem;
+	height: 2rem;
+    font: 1rem sans-serif;
+	border-radius: 0.2rem;
+	border-color: grey;
+	box-sizing: border-box;
+	margin-bottom: 2.5rem
+}
 
+label {
+	text-align: right;
+}
+
+#loginsection {
+	display: inline-block;
+	position: relative;
+	left : 5rem;
+	border-color: #F7F7F7;
+}
+
+#createaccsection {
+	display: inline-block;
+  position: relative;
+	right: 17rem;
+	float: right;
+}
 
 footer {
-	display : block;
-	border-style : solid;
-	border-width : 0.1rem;
-	background-color : yellow;
+	 display: block;
+	  background-color: black;
+    position: absolute;
+    height: 0.18rem;
+    margin: 0;
+	   text-align: center;
+	z-index: 100;
+	padding: 5rem;
+	color:white;
+	padding: 3rem;
+	overflow: hidden;
+	margin-left: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-size: cover;
+	bottom: -100%;
+	text-align: center;
 }
 
-footer p {
-	text-align : center;
+
+#button {
+	margin-top: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 2.1rem;
+	border-radius: 0.4rem;
+	background-color: black;
+	color:white;
+}
+
+#inputform {
+	display: block;
+	margin: auto;
+	width: 90%;
 }
