--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -6,16 +6,61 @@ body {
 	margin: 0;
 }
 
+ul {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: inline-block;
+	margin-top: 0;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	background-color: #e8e8e8;
+	overflow: hidden;
+}
+
+li {
+	display: inline;
+	float :left;
+}
+
+li a{
+	display : block;
+	color: black;
+	text-align: center;
+	padding: 1.44rem;
+	text-decoration: none;
+}
+
+li:hover {
+	background-color: white;
+}
+
+header { 
+  display: block;
+	position: absolute;
+	top: 0;
+	padding-bottom: 3rem;
+	width: 100%;
+	background-color: #e8e8e8;
+	box-shadow: 0 5px 8px 0 black, 0 9px 26px 0 black;
+}
 
 #greeting {
 	font-family :Candara;
 	font-style: serif;
   font-size: 1.7rem;
-	text-align: center;
 	padding: 1rem;
 	margin-top: 0;
 	background-color: #e8e8e8;
-	box-shadow: 0 5px 8px 0 black, 0 9px 26px 0 black;
+
+	margin-bottom: 1rem;
+	display: block;
+	width: 15%;
+	position: absolute;
+	top:0;
+	text-decoration: none;
+	color: black;
 }
 
 input {
@@ -35,29 +80,31 @@ label {
 }
 
 #loginsection {
-	display: inline-block;
-	position: relative;
-	left : 7rem;
+	display: block;
+	width: 77%;
+	margin: auto;
 	border-color: #F7F7F7;
 	padding: 4rem;
+	margin-top: 5rem;
+	margin-bottom: 0rem;
 	box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
 
 #createaccsection {
-	display: inline-block;
-  position: relative;
-	right: 7rem;
-	float: right;
+	display: block;
+	margin: auto;
+	width: 70%;
 	padding: 5rem;
-	box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+	padding-bottom: 1rem;
+	margin-bottom: 5rem;
+	margin-top: 5rem;
+	box-shadow: 0 5px 8px 0 black, 0 9px 26px 5px black;
 }
 
 #footer {
 	display:block;
-	position: relative;
-	bottom: 0;
-	left: 0;
-	right : 0;
+	position: absolute;
+  bottom: 0;
 	background-color: #e8e8e8;
 	width: 100%;
 	margin-left: 0;
@@ -67,7 +114,8 @@ label {
 	overflow : hidden;
 	margin-left: 0;
 	text-align: center;
-	box-shadow: 0 5px 8px 0 black, 0 9px 26px 0 black;
+	box-shadow: 0 -5px 8px 0 black, 0 9px 26px 0 black;
+	margin-bottom: -20rem;
 }
 
 
@@ -80,10 +128,15 @@ label {
 	color:white;
 }
 
+#button:hover {
+	background-color: #262525;
+}
+
 #inputform {
 	display: block;
 	margin: auto;
 	width: 90%;
-	margin-bottom: 30rem;
+	box-shadow: 0 5px 8px 0 black,
+	margin-top: 30rem;
 }
 
