--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -45,14 +45,25 @@ input {
 	margin-bottom: 0.5rem;
 }
 
-label {
-	text-align: right;
-	font-size: 0.6rem;
+label ,input, .formheading{
+	display: block;
+	margin: auto;
+  margin-top: 1rem;
+	width: 20%;
+	font-size: 1rem;
+	
+}
+
+.formheading {
+	padding: 1rem;
+	padding-top: 0;
+	margin-top: 0rem;
+	font-size: 1.5rem;
 }
 
 #loginsection {
 	display: block;
-	width: 77%;
+	width: 80%;
 	margin: auto;
 	border-color: #F7F7F7;
 	padding: 4rem;
@@ -65,6 +76,7 @@ label {
 	margin: auto;
 	width: 70%;
 	padding: 5rem;
+	
 	padding-bottom: 1rem;
 	margin-bottom: 5rem;
 	margin-top: 5rem;
@@ -86,32 +98,42 @@ label {
 }
 
 
-/* #button {
-	margin-top: 1rem;
-	padding-top: 0.7rem;
-	padding-bottom: 1.5rem;
-	border-radius: 0.4rem;
-	background-color: black;
-	color:white;
-} */
+ #button {
+	 height: 10%;
+  border-radius: 0;
+	background-color: #fafafa;
+	color: black;
+	font-size: 0.8rem;
+  text-decoration: none;
+  text-align: center;
+  width: 20%;
+	 margin-top: 2rem;
+	 padding: 0.5rem;
+	 margin-bottom: 3rem;
+  border: 0.09rem solid black;
+} 
 
 #button:hover {
-	background-color: #262525;
+	cursor: pointer;
+}
+
+#button:hover {
+	background-color: white;
 }
 
 #inputform {
 	display: block;
 	margin: auto;
-	width: 90%;
+	width: 100%;
 	margin-top: 2rem;
 	margin-bottom: 9rem;
+	
 }
 
 
 .error {
-  display:block;
   position: relative;
-	left: 11rem;
+	left: 30rem;
 	color: red;
 	bottom: 2rem;
 	font-size: 0.7rem;
@@ -237,31 +259,75 @@ li.dropdown {
 .main-content {
 	margin: auto;
 	width: 90%;
-  overflow: visible;
 	position: relative;
 	top: 10rem;
 	background-color: white;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
 	max-height: 90%;
 	margin-bottom: 20rem;
 }
 
 
 
-.reservebutton {
+.reservelink {
   display: block;
 	position: relative;
 	left: 40rem;
 	bottom: 2rem;
-  padding: 1rem;
-	padding-bottom: 1.9rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	background-color: #fafafa;
-	box-shadow: 0 0.13rem 0.2rem 0 rgba(0,0,0,0.2);
+	color: black;
 	font-size: 0.9rem;
   border-radius: 2px;
+  text-decoration: none;
+  text-align: center;
+  width: 10%;
+  border: 0.1rem solid black;
 }
 
-.reservebutton:hover {
+.reservelink:hover {
 	cursor: pointer;
 	background-color: white;
+}
+
+
+.cancellink {
+	display: block;
+  position: relative;
+  left: 40rem;
+  bottom: 2rem;
+  padding: 2rem;
+  background-color: #fafafa;
+  color: black;
+  font-size: 0.9rem;
+	border-radius: 2px;
+	text-decoration: none;
+	text-align: center;
+	width: 20%;
+	border: 0.1rem solid black;
+}
+
+
+.cancellink:hover {
+	cursor: pointer;
+	background-color: white;
+}
+
+
+.reserveError {
+	display: block;
+	margin: auto;
+	width: 80%;
+	padding: 2rem;
+	font-size:1.5rem;
+}
+
+.message {
+  font-size: 1.5rem;
+}
+
+img {
+	width: 100%;
+	border: 1px solid black;
 }
